feat: siwe login
- extend auth to support sign in with ethereum

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,10 @@
 AUTH_SECRET=""
 NEXTAUTH_URL_INTERNAL="http://localhost:3000"
 NEXTAUTH_URL=http://localhost:1918
+NEXT_PUBLIC_URL=http://localhost:1918
+# Get projectId from https://cloud.reown.com
+NEXT_PUBLIC_REOWN_PROJECT_ID=-1
+
 LOCALE=en
 
 # Prisma
