--- a/package.json
+++ b/package.json
@@ -55,7 +55,11 @@
     "@radix-ui/react-toast": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@regen-network/api": "1.0.0-alpha6",
+    "@reown/appkit": "^1.6.9",
+    "@reown/appkit-adapter-wagmi": "^1.6.9",
+    "@reown/appkit-siwe": "^1.6.9",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@tanstack/react-query": "^5.66.11",
     "@tanstack/react-table": "^8.20.6",
     "@tanstack/react-virtual": "^3.11.2",
     "bcryptjs": "^2.4.3",
@@ -84,6 +88,8 @@
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.4",
     "uuid": "^11.0.3",
+    "viem": "^2.23.5",
+    "wagmi": "^2.14.12",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -107,6 +113,7 @@
     "graphql": "^16.10.0",
     "graphql-ws": "^5.16.0",
     "jest": "^29.7.0",
+    "pino-pretty": "^13.0.0",
     "postcss": "^8.4.49",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
