feat(signin): make appkit-signin optional when env is not set

--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,6 @@ LOCALE=en
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
 DATABASE_URL="postgresql://root:root@database:5432/api"
+
+# Appkit -> get a project id
+NEXT_PUBLIC_REOWN_PROJECT_ID=
